Added tracking code and COI

--- a/3Cavaliers/index.html
+++ b/3Cavaliers/index.html
@@ -125,6 +125,7 @@
 			<h2 class="vpr-page-title">3 Cavaliers</h2>
 			<h3 class="section-heading">Creative. Collaborative. Consequential.</h3>
 				<br>
+				<p><strong>3 Cavaliers is a rapid seed funding program that enables creative, collaborative, consequential research ideas.</p></strong>
 				<p>The 3C program provides support for groups of three collaborative faculty members spread across at least two disparate disciplines, located in different units or schools, to self-assemble, formulate and explore creative, high-risk, high-payoff interdisciplinary research ideas that might not be ready for more traditional funding.</p>
 				<div class="col-sm-8 col-sm-offset-1">
 				<ul>
