--- a/Compliance/COI.html
+++ b/Compliance/COI.html
@@ -9,8 +9,8 @@
 <meta name="author" content="IT Services, Office of the VP for Research">
 <link rel="icon" href="../all-vpr-web/img/favicon.ico">
 <!-- InstanceBeginEditable name="doctitle" -->
-	<title>Anjula Joseph</title>
-	<!-- InstanceEndEditable -->
+<title>Conflict of Interest - Compliance</title>
+<!-- InstanceEndEditable -->
 <!--
 	<script src="//use.typekit.net/tgy5tlj.js"></script>
 	<script>try{Typekit.load();}catch(e){}</script>
@@ -43,7 +43,7 @@
   gtag('config', 'UA-77273128-1');
 </script>
 <!-- InstanceBeginEditable name="head" -->
-    <!-- InstanceEndEditable -->
+<!-- InstanceEndEditable -->
 </head>
 
 <body>
@@ -64,7 +64,7 @@
     <div class="container-fluid">
       <div class="collapse navbar-collapse" id="vpr-main-nav">
         <ul class="nav navbar-nav navbar-uva-site">
-          <li><a href="../Compliance/index.html">Compliance</a></li>
+          <li><a href="index.html">Compliance</a></li>
           <li><a href="../projects-and-initiatives.html">Initiatives</a></li>
           <li><a href="https://lvg.virginia.edu/">Licensing</a></li>
           <li><a href="http://www.virginia.edu/sponsoredprograms/">Sponsored Programs</a></li>
@@ -104,25 +104,98 @@
       </div>
     </div>
     <div class="col-sm-8"><!-- InstanceBeginEditable name="PageTitleTop" -->
-		  <div class="main-content">
-		    <h2 class="vpr-page-title">Anjula Joseph</h2>
-		    <div class="row">
-				<div class="col-sm-12">
-					<img class="headshot" src="../all-vpr-web/img/Joseph.Anjula2016.jpg" alt="Joseph">
-					<p>Anjula Joseph is the Senior Director of Finance at the Office of the Vice President for Research (VPR). In this role, Anjula oversees finance activity of VPR units and initiatives, including the Office of Environmental Health and Safety, the Office of Graduate Studies and Postdoctoral Affairs, the Center for Comparative Medicine, UVA Research Compliance and the Virginia Quarterly Review, and she spearheads the VPR budget development process. She advises the Vice President on resource allocation and administrative matters, leads and oversees select VPR funding programs , and allocates and oversees VPR strategic investments which aim to enhance academic excellence in collaboration with Schools by creating, catalyzing and nurturing early-stage, collaborative, high-value, cross-school, multi-disciplinary, as well as school-specific, research, scholarship and innovation opportunities, and by providing service to school and non-school units. Anjula is the primary liaison between VPR and the University on financial matters, and she represents VPR on Institutional financial and administrative committees.</p>
-		    		<p>Prior to joining VPR, Anjula served as the Assistant Director of Programs at the Darden School’s Batten Institute for Entrepreneurship and Innovation, and as Senior Budget Analyst and Budget Manager at the University Budget Office. Prior to joining the University of Virginia, Anjula held the role of Senior Accounting Analyst at SNL Financial, where she covered over 80 companies in the financial services industry. Anjula earned her BBA degree in Finance from James Madison University and her MBA degree from the University of Richmond.</p>
-			  </div>
-		    </div>
-		    
-		    <p>Anjula Joseph is the Senior Director of Finance at the Office of the Vice President for Research (VPR). In this role, Anjula oversees finance activity of VPR units and initiatives, including the Office of Environmental Health and Safety, the Office of Graduate Studies and Postdoctoral Affairs, the Center for Comparative Medicine, UVA Research Compliance and the Virginia Quarterly Review, and she spearheads the VPR budget development process. She advises the Vice President on resource allocation and administrative matters, leads and oversees select VPR funding programs , and allocates and oversees VPR strategic investments which aim to enhance academic excellence in collaboration with Schools by creating, catalyzing and nurturing early-stage, collaborative, high-value, cross-school, multi-disciplinary, as well as school-specific, research, scholarship and innovation opportunities, and by providing service to school and non-school units. Anjula is the primary liaison between VPR and the University on financial matters, and she represents VPR on Institutional financial and administrative committees.</p>
-		    <p>Prior to joining VPR, Anjula served as the Assistant Director of Programs at the Darden School’s Batten Institute for Entrepreneurship and Innovation, and as Senior Budget Analyst and Budget Manager at the University Budget Office. Prior to joining the University of Virginia, Anjula held the role of Senior Accounting Analyst at SNL Financial, where she covered over 80 companies in the financial services industry. Anjula earned her BBA degree in Finance from James Madison University and her MBA degree from the University of Richmond.</p>
-	    </div>
-		<!-- InstanceEndEditable --></div>
+      <div class="main-content">
+        <h2 class="vpr-page-title">Conflict of Interest</h2>
+        <p>The University is committed to conducting the highest quality research. This commitment requires an unwavering commitment to research objectivity. The Conflicts of Interest Committee (COI) considers financial disclosures made by investigators and key personnel who have significant financial interests related to their research and recommends to the Vice President of Research how the conflict should be managed, reduced or eliminated.</p>
+        <p> A COI investigator is any individual, regardless of title, role or position, who is responsible for the design, conduct, or reporting of research on a proposal to a relevant federal agency/under a relevant solicitation.</p>
+        <a href="../all-vpr-web/assets/InvestigatorQuickReferenceGuideOct16.docx"><h3 class="bbb">Quickguide</h3></a>
+        <a href="../all-vpr-web/assets/OSP+VPR COI process 20170620.pdf"><h3 class="bbb">UVA Process</h3></a>
+        <a href="regulations.html"><h3 class="bbb">Regulations</h3></a>
+
+      </div>
+      <!-- InstanceEndEditable --></div>
   </div>
 </div>
 <!-- InstanceBeginEditable name="CenterContent" -->
-<!--Begin: UVA Brand Template - Main Content -->
-<!--End: UVA Brand Template - Main Content -->
+<div class="container-fluid">
+  <div class="main-content">
+    <div class="row dotted">
+      <div class="col-sm-12">
+      <h3>CITI Training Program</h3>
+        <p>The Collaborative Institutional Training Initiative (CITI Program) is dedicated to promoting the public’s trust in the research enterprise by providing high quality, peer-reviewed, web-based educational courses in research, ethics, regulatory oversight, responsible conduct of research, research administration, and other topics pertinent to the interests of member organizations and individual learners.</p>
+        <p>Please read the instructions and complete the online Conflict of Interest training course.</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12">
+        <a href="https://www.citiprogram.org/Shibboleth.sso/Login?target=https%3A%2F%2Fwww.citiprogram.org%2FSecure%2FWelcome.cfm%3finst%3d429&entityID=urn:mace:incommon:virginia.edu"><h3 class="bbb">Online COI Training Course</h3></a>
+        <a href="../all-vpr-web/assets/CITI.TrainingInstructions.2017.pdf"><h3 class="bbb">Instructions</h3></a>
+      </div>
+    </div>
+    <div class="row dotted">
+      <div class="col-sm-9">
+        <h3>Financial Conflicts of Interest</h3>
+        <p>If a researcher has a personal financial interest that may bias or appear to bias his research, he
+could have a research-related financial conflict of interest. Virginia law,
+federal research rules, and University policy define and regulate these conflicts. </p>
+        <a href="../all-vpr-web/assets/FAQs_to_coi.pdf"><h3 class="bbb">FAQ</h3></a>
+        <a href="https://coi.sites.virginia.edu/"><h3 class="bbb">Online Disclosure System</h3></a>
+        <a href="../all-vpr-web/assets/overcoming the rebuttable.doc"><h3 class="bbb">Human Subjects Research</h3></a>
+        <a href="../all-vpr-web/assets/Background-Information-for-COI-Committee.doc"><h3 class="bbb">Exemption Request</h3></a>
+      </div>
+      <div class="col-sm-3 vpr-callout">
+        <h3 class="vpr-callout">By the Numbers</h3>
+        <ul>
+          <li> Federal Funding: <em>$260m</em> </li>
+          <li> Total Research: <em>$338m</em> </li>
+        </ul>
+        <p>UVa’s total research funding $338 million, of which $260 million is federal research dollars.</p>
+        <p><a class="vpr-callout" href="../all-vpr-web/assets/ResearchNumbers2018.pdf">Download the PDF</a></p>
+      </div>
+    </div>
+    <div class="row centered dotted">
+      <h2>2016-2017 Conflict of Interest Committee</h2>
+    </div><div class="row">
+    <div class="col-sm-5">
+      <h3>Voting Members</h3>
+      <table class="table table-striped">
+        <tr>
+          <th>Name</th>
+          <th>Representing</th>
+        </tr>
+        <tr><td>Elizabeth Adams</td><td>OSP</td></tr>
+        <tr><td>Catherine Bradshaw</td><td>Curry</td></tr>
+        <tr><td>Stewart Craig</td><td>SOM</td></tr>
+        <tr><td>Jerry Donowitz</td><td>SOM</td></tr>
+        <tr><td>James Groves</td><td>SEAS</td></tr>
+        <tr><td>David Hudson</td><td>VPR</td></tr>
+        <tr><td>James Landers</td><td>SEAS</td></tr>
+        <tr><td>Mimi Riley</td><td>LAW, Batten</td></tr>
+        <tr><td>Ann Taylor</td><td>SOM</td></tr>
+        <tr><td>Patti Tereskerz</td><td></td></tr>
+        <tr><td>Steve Wasserman</td><td>SOM</td></tr>
+        <tr><td>Andy Wicks</td><td>Darden</td></tr>
+      </table>
+    </div>
+    <div class="col-sm-1"></div>
+    <div class="col-sm-5">
+    <h3>Non-voting Members</h3>
+      <table class="table table-striped">
+        <tr>
+          <th>Name</th>
+          <th>Representing</th>
+        </tr>
+        <tr><td>Jean Eby</td><td>SOM, PBHS</td></tr>
+        <tr><td>Beth Hodson</td><td>LC</td></tr>
+        <tr><td>Michael Straightiff</td><td>LVG</td></tr>
+        <tr><td>Charlotta Wriston</td><td>SOM, Compliance</td></tr>
+        <tr><td>Cheryl Wagner</td><td>VPR, Compliance</td></tr>
+      </table>
+      <img src="../all-vpr-web/img/COI-image2.jpg"/>
+    </div>
+    </div>
+  </div>
+</div>
 <!-- InstanceEndEditable -->
 <div class="container-fluid dotted">
   <div class="row">
@@ -130,7 +203,7 @@
       <div class="flex-card-inner">Research around UVA</div>
       </a> <a href="../resources-for-researchers/index.html" class="flex-card">
       <div class="flex-card-inner">Resources for Researchers</div>
-      </a> <a href="../Compliance/index.html" class="flex-card">
+      </a> <a href="index.html" class="flex-card">
       <div class="flex-card-inner">Compliance & Ethics</div>
       </a> <a href="../news.html" class="flex-card">
       <div class="flex-card-inner">News</div>
