--- a/Compliance/index.html
+++ b/Compliance/index.html
@@ -33,6 +33,15 @@
     <![endif]-->
 <!--    Access Analytics Script-->
 <script>var access_analytics={base_url:"https://analytics.ssbbartgroup.com/api/",instance_id:"AA-58bdcc11cee35"};(function(a,b,c){var d=a.createElement(b);a=a.getElementsByTagName(b)[0];d.src=c.base_url+"access.js?o="+c.instance_id+"&v=2";a.parentNode.insertBefore(d,a)})(document,"script",access_analytics);</script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-77273128-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-77273128-1');
+</script>
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
 </head>
@@ -122,7 +131,7 @@
         <div class="description">
           <p class="description_content">Compliance Training</p>
         </div>
-        </a> <a href="http://www.virginia.edu/vpr/Compliance/COI.html" class="wrapper zoom-in"> <img src="../all-vpr-web/img/brand/sized-3-2/sponsored_research_2017_0034_tiomothy-swope-116695-unsplash.jpg">
+        </a> <a href="COI.html" class="wrapper zoom-in"> <img src="../all-vpr-web/img/brand/sized-3-2/sponsored_research_2017_0034_tiomothy-swope-116695-unsplash.jpg">
         <div class="description">
           <p class="description_content">Conflict of Interest</p>
         </div>
@@ -303,6 +312,7 @@
           <td>Biomedical Ethics Associate Professor</td>
           <td>dpatti@virginia.edu</td>
           <td>434.243.6659</td>
+        </tr>
         <tr>
           <td>Research Integrity</td>
           <td>Dave Hudson</td>
