research net finished

--- a/3Cavaliers/index.html
+++ b/3Cavaliers/index.html
@@ -135,6 +135,7 @@
 					<li>Sept. 24 &mdash; Dec. 10, 2018:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Additional projects</li>
 					<li>December, 2019:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Symposium</li>
 				</ul>
+          <p><a href="../all-vpr-web/assets/3C-Faculty Presentation edited May 11.PPTX"><strong>Additional Program Details Powerpoint</strong></a></p>
 				</div>
 				<div class="clearfix"></div>
 				<h3 class="section-heading">What is 3 Cavaliers?</h3>
@@ -143,6 +144,7 @@
 				<p>This program will be available in July 2018. Funding will begin September 2018.</p>
 				<h3 class="section-heading">Questions?</h3>
 				<p>Please contact Cheryl Wagner (cheryl-vpr@virginia.edu). We would be glad to talk with you about this exciting program.</p>
+        
 			</div>
 		</div>
 	</div>
