--- a/Compliance/index.html
+++ b/Compliance/index.html
@@ -49,7 +49,7 @@
 <body>
 <div class="uva-header-brand brandbar">
   <div class="container-fluid">
-    <div class="brandbar-content"> <a class="navbar-brand text-hide uva-logo" href="#">University Of Virginia</a> <a href="http://www.virginia.edu/search/site/" class="pull-right uva-search" aria-label="Search"><span class="glyphicon glyphicon-search " aria-hidden="true"></span></a> </div>
+    <div class="brandbar-content"> <a class="navbar-brand text-hide uva-logo" href="http://www.virginia.edu/">University Of Virginia</a> <a href="http://www.virginia.edu/search/site/" class="pull-right uva-search" aria-label="Search"><span class="glyphicon glyphicon-search " aria-hidden="true"></span></a> </div>
   </div>
 </div>
 <nav class="navbar">
@@ -153,7 +153,7 @@
         </div>
         </a> <a href="https://lvg.virginia.edu/innovators/patent-agreement-and-assignment-instructions" class="wrapper zoom-in"> <img src="https://support.coopercenter.org/sites/support/files/lead.png">
         <div class="description">
-          <p class="description_content">Patient Agreement or Assignment</p>
+          <p class="description_content">Sign the Patent Agreement</p>
         </div>
         </a> <a href="http://www.virginia.edu/vpr/Compliance/integrity.html" class="wrapper zoom-in"> <img src="../all-vpr-web/img/brand/sized-3-2/3-2_0017_luke-michael-275911.png">
         <div class="description">
