--- a/resources-for-researchers/index.html
+++ b/resources-for-researchers/index.html
@@ -49,7 +49,7 @@
 <body>
 <div class="uva-header-brand brandbar">
   <div class="container-fluid">
-    <div class="brandbar-content"> <a class="navbar-brand text-hide uva-logo" href="#">University Of Virginia</a> <a href="http://www.virginia.edu/search/site/" class="pull-right uva-search" aria-label="Search"><span class="glyphicon glyphicon-search " aria-hidden="true"></span></a> </div>
+    <div class="brandbar-content"> <a class="navbar-brand text-hide uva-logo" href="http://www.virginia.edu/">University Of Virginia</a> <a href="http://www.virginia.edu/search/site/" class="pull-right uva-search" aria-label="Search"><span class="glyphicon glyphicon-search " aria-hidden="true"></span></a> </div>
   </div>
 </div>
 <nav class="navbar">
@@ -155,7 +155,7 @@
           <li><a href="http://economicdevelopment.virginia.edu/"> Strategic Corporate Partners </a></li>
           <li><a href="http://sif.virginia.edu/"> Strategic Investment Fund </a></li>
           <li><a href="http://gradstudies.virginia.edu/"> Graduate & Postdoctoral Affairs </a></li>
-          <li><a href="faculty-onboarding.html"> New Faculty On Boarding </a></li>
+          <li><a href="faculty-onboarding.html"> New Faculty Onboarding </a></li>
           <li><a href="http://uvapolicy.virginia.edu/"> Policy Directory </a></li>
           <li><a href="http://sponsoredprograms.virginia.edu/">Sponsored Programs</a></li>
           <li><a href="../Compliance/index.html">Research Compliance</a></li>
@@ -194,7 +194,7 @@
         </div>
         </a> <a href="faculty-onboarding.html" class="wrapper zoom-in"> <img src="../all-vpr-web/img/brand/sized-3-2/sponsored_research_2017_0046_scott-webb-337820-unsplash.jpg">
         <div class="description">
-          <p class="description_content">New Faculty On Boarding</p>
+          <p class="description_content">New Faculty Onboarding</p>
         </div>
         </a> <a href="http://uvapolicy.virginia.edu/" class="wrapper zoom-in"> <img src="../all-vpr-web/img/brand/sized-3-2/sponsored_research_2017_0031_85fifteen-323873-unsplash.jpg">
         <div class="description">
