--- a/resources-for-researchers/research-net.html
+++ b/resources-for-researchers/research-net.html
@@ -7,10 +7,10 @@
 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 <meta name="description" content="University of Virginia; Office of the VP for Research">
 <meta name="author" content="IT Services, Office of the VP for Research">
-<link rel="icon" href="all-vpr-web/img/favicon.ico">
+<link rel="icon" href="../all-vpr-web/img/favicon.ico">
 <!-- InstanceBeginEditable name="doctitle" -->
-	<title>Leadership - Office of the Vice President for Research</title>
-	<!-- InstanceEndEditable -->
+<title>Office of the Vice President for Research</title>
+<!-- InstanceEndEditable -->
 <!--
 	<script src="//use.typekit.net/tgy5tlj.js"></script>
 	<script>try{Typekit.load();}catch(e){}</script>
@@ -18,13 +18,13 @@
 	<link href="dist/fonts/typefaces.css" rel="stylesheet" type="text/css">
 -->
 <link rel="stylesheet"  href="https://use.typekit.net/tgy5tlj.css">
-<link href="all-vpr-web/dist/css/bootstrap.css" rel="stylesheet" type="text/css">
-<link href="all-vpr-web/dist/css/brand.css" rel="stylesheet" type="text/css">
-<link href="all-vpr-web/dist/css/vpr.css" rel="stylesheet" type="text/css">
-<link href="all-vpr-web/dist/css/responsive.css" rel="stylesheet" type="text/css">
+<link href="../all-vpr-web/dist/css/bootstrap.css" rel="stylesheet" type="text/css">
+<link href="../all-vpr-web/dist/css/brand.css" rel="stylesheet" type="text/css">
+<link href="../all-vpr-web/dist/css/vpr.css" rel="stylesheet" type="text/css">
+<link href="../all-vpr-web/dist/css/responsive.css" rel="stylesheet" type="text/css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="all-vpr-web/js/vpr-dev.js"></script>
+<script src="../all-vpr-web/js/vpr-dev.js"></script>
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
@@ -43,7 +43,7 @@
   gtag('config', 'UA-77273128-1');
 </script>
 <!-- InstanceBeginEditable name="head" -->
-    <!-- InstanceEndEditable -->
+<!-- InstanceEndEditable -->
 </head>
 
 <body>
@@ -64,11 +64,11 @@
     <div class="container-fluid">
       <div class="collapse navbar-collapse" id="vpr-main-nav">
         <ul class="nav navbar-nav navbar-uva-site">
-          <li><a href="Compliance/index.html">Compliance</a></li>
-          <li><a href="projects-and-initiatives.html">Initiatives</a></li>
+          <li><a href="../Compliance/index.html">Compliance</a></li>
+          <li><a href="../projects-and-initiatives.html">Initiatives</a></li>
           <li><a href="https://lvg.virginia.edu/">Licensing</a></li>
           <li><a href="http://www.virginia.edu/sponsoredprograms/">Sponsored Programs</a></li>
-          <li><a href="resources-for-researchers/index.html">Tools</a></li>
+          <li><a href="index.html">Tools</a></li>
           <li><a href="http://www.virginia.edu/vpr/news.html">News</a></li>
           <li><a href="https://securelb.imodules.com/s/1535/16-uva/index.aspx?sid=1535&gid=16&pgid=684&cid=1509&dids=1161.1162.1163&bledit=1">Give</a></li>
         </ul>
@@ -81,21 +81,21 @@
   <div class="row">
     <div class="col-sm-3" id="sidebar">
       <div class="vpr-site-title">
-        <h2> <a href="index.html" class="sidebar-nav-active"><img alt="UVA Research Logo" src="all-vpr-web/img/uva-research-logo-cropped.jpg" class="site-logo"></a> </h2>
+        <h2> <a href="../index.html" class="sidebar-nav-active"><img alt="UVA Research Logo" src="../all-vpr-web/img/uva-research-logo-cropped.jpg" class="site-logo"></a> </h2>
       </div>
       <div class="nav">
         <ul class="sidebar-nav">
           <li class="nav-item">
-            <h2 class="sidebar-nav-item"> <a class="nav-item" href="contact.html">Contact & Directions</a> </h2>
+            <h2 class="sidebar-nav-item"> <a class="nav-item" href="../contact.html">Contact & Directions</a> </h2>
           </li>
           <li class="nav-item">
-            <h2 class="sidebar-nav-item"> <a class="nav-item" href="leadership.html">Leadership</a> </h2>
+            <h2 class="sidebar-nav-item"> <a class="nav-item" href="../leadership.html">Leadership</a> </h2>
           </li>
           <li class="nav-item">
-            <h2 class="sidebar-nav-item"> <a class="nav-item" href="staff.html">Staff</a> </h2>
+            <h2 class="sidebar-nav-item"> <a class="nav-item" href="../staff.html">Staff</a> </h2>
           </li>
           <li class="nav-item">
-            <h2 class="sidebar-nav-item"> <a class="nav-item" href="news.html">News</a> </h2>
+            <h2 class="sidebar-nav-item"> <a class="nav-item" href="../news.html">News</a> </h2>
           </li>
           <li class="nav-item">
             <h2 class="sidebar-nav-item"> <a class="nav-item" href="https://securelb.imodules.com/s/1535/16-uva/index.aspx?sid=1535&gid=16&pgid=684&cid=1509&dids=1161.1162.1163&bledit=1">Give</a> </h2>
@@ -104,55 +104,53 @@
       </div>
     </div>
     <div class="col-sm-8"><!-- InstanceBeginEditable name="PageTitleTop" -->
-		  <div class="main-content">
-		    <h2 class="vpr-page-title">Leadership</h2>
-		    <div class="row">
-		    	<img class="col-sm-6" src="all-vpr-web/img/ram02.jpg"/>
-		    	<div class="col-sm-6">
-		    		<h3>Melur K. (Ram) Ramasubramanian</h3>
-					<h4>Vice President for Research</h4>
-					<p>Professor, Mechanical & Aerospace Engineering<br><a href="mailto:rammk@virginia.edu">rammk@virginia.edu</a></p>
-		    	</div>
-		    </div> 
-	    </div>
-		<!-- InstanceEndEditable --></div>
+      <div class="main-content">
+        <h2 class="vpr-page-title">ResearchNet</h2>
+        <p>ResearchNet is made up of a network of people focused on Research Development:</p>
+        <img alt="Research Net Image" src="../all-vpr-web/img/ResearchNETteam.jpg"/>
+        <p>ResearchNet is a cross-Grounds initiative funded by the Strategic Investment Fund with the objective of assisting faculty in discovery of opportunities for external support of their research, and to assist faculty in finding potential collaborations across Grounds.</p>
+      </div>
+      <!-- InstanceEndEditable --></div>
   </div>
 </div>
 <!-- InstanceBeginEditable name="CenterContent" -->
-<!--Begin: UVA Brand Template - Main Content -->
 <div class="container-fluid">
-  <div class="row">
-    <div class="col-sm-8 col-sm-offset-3">
-     <div class="main-content">
-      <p>Effective August 1, 2017 Melur K. “Ram” Ramasubramanian became the Vice President for Research. He was the program director for the Engineering Research Centers program at the National Science Foundation and was the D.W. Reynolds Distinguished Professor and department chair of Mechanical Engineering at Clemson University, with a joint faculty appointment as professor of bioengineering.</p>
-      <p>Prior to arriving at Clemson, Ramasubramanian was the lead program director for the Integrative Graduate Education and Research Traineeship program at the National Science Foundation from 2009 to 2012. Before that, he served as a professor of mechanical and aerospace engineering at North Carolina State University and research associate for the James River Corporation (now Georgia-Pacific) and Syracuse University. His research interests are highly interdisciplinary, at the interface of engineering, biology, physical sciences, and medicine. Specific topics include mechanics of manufacturing processes, constitutive models for short fiber composites, bio-manufacturing and tissue engineering, scalable microfluidics, biomimetics, mechatronics, and biomedical devices. He has been widely published in engineering and biomedical journals and is an associate editor for the IEEE Access-The Multidisciplinary Open Access Journal.</p>
-      <p>Ramasubramanian graduated from the National Institute of Technology in Durgapur, India, with a bachelor of science in mechanical engineering; Miami University in Oxford, Ohio, with a master of science in applied sciences; and Syracuse University with a Ph.D. in mechanical engineering. He is a fellow of the American Society of Mechanical Engineers, the Technical Association of the Pulp and Paper Industry and the American Institute for Medical and Biological Engineering and a senior member of the Institute of Electrical and Electronic Engineers and the Engineering in Medicine and Biology Society.</p><a href="https://news.virginia.edu/content/melur-k-ramasubramanian-appointed-uva-vice-president-research">Read the full Press Release</a>
-    </div>
+  <div class="main-content">
+    <div class="row dotted"> 
+      <h3>School-Based Research Development Staff</h3>
+      <ul>
+        <li><a href="https://engineering.virginia.edu/about/offices/office-research/research-development"> Susan Barker, Senior Director of Research Development, SEAS</a></li>
+        <li><a href="https://news.med.virginia.edu/blog/driscoll-appointed-director-of-research-development/"> David Driscoll, Director of Research Development, SOM</a></li>
+        <li><a href="http://as.virginia.edu/listing/rana-ganguly"> Rana Ganguly, Director of Sponsored Research Development, College of Arts &amp; Sciences </a></li>
+        <li><a href="http://www.virginia.edu/vpr/bios/Sherman.html"> Bill Sherman, Professor of Architecture, Associate Vice President for Research in Design, Arts and the Humanities </a></li>
+        <li><a href=" https://curry.virginia.edu/faculty-research/research-administration"> Catherine Thompson, Pre-Award Research Administrator, Curry School of Education</a></li>
+      </ul>
+
+        We have partnered with the  <a href="https://www.hsl.virginia.edu"> Health Sciences Library</a> and <a href="http://www.library.virginia.edu">University Library</a> to launch a series of workshops for faculty and students on online tools for discovery of research opportunities (Pivot and GrantForward) which have been licensed for this purpose. ResearchNet will also provide support for preparation of large, multidisciplinary proposals. If you are interested in pursuing a large, multidisciplinary proposal please contact your Dean’s Office and/or the Research Development staff identified above.
     </div>
   </div>
 </div>
-<!--End: UVA Brand Template - Main Content -->
 <!-- InstanceEndEditable -->
 <div class="container-fluid dotted">
   <div class="row">
-    <div class="vpr-squares-flex vpr-squares-flex-1 col-sm-12"> <a href="research-around-uva.html" class="flex-card">
+    <div class="vpr-squares-flex vpr-squares-flex-1 col-sm-12"> <a href="../research-around-uva.html" class="flex-card">
       <div class="flex-card-inner">Research around UVA</div>
-      </a> <a href="resources-for-researchers/index.html" class="flex-card">
+      </a> <a href="index.html" class="flex-card">
       <div class="flex-card-inner">Resources for Researchers</div>
-      </a> <a href="Compliance/index.html" class="flex-card">
+      </a> <a href="../Compliance/index.html" class="flex-card">
       <div class="flex-card-inner">Compliance & Ethics</div>
-      </a> <a href="news.html" class="flex-card">
+      </a> <a href="../news.html" class="flex-card">
       <div class="flex-card-inner">News</div>
       </a> </div>
   </div>
   <div class="row">
-    <div class="vpr-squares-flex vpr-squares-flex-2 col-sm-12"> <a href="projects-and-initiatives.html" class="flex-card">
+    <div class="vpr-squares-flex vpr-squares-flex-2 col-sm-12"> <a href="../projects-and-initiatives.html" class="flex-card">
       <div class="flex-card-inner">Projects & Initiatives</div>
       </a> <a href="https://economicdevelopment.virginia.edu/" class="flex-card">
       <div class="flex-card-inner">Economic Development</div>
-      </a> <a href="leadership.html" class="flex-card">
+      </a> <a href="../leadership.html" class="flex-card">
       <div class="flex-card-inner">VPR Leadership</div>
-      </a> <a href="UAS/index.html" class="flex-card">
+      </a> <a href="../UAS/index.html" class="flex-card">
       <div class="flex-card-inner">Unmanned Aircraft (UAS)</div>
       </a> </div>
   </div>
@@ -179,7 +177,7 @@
       </div>
       <div class="col-sm-4 col-md-4 col-lg-3 uva-footer-text-col">
         <ul>
-          <li class="social-media"><a href="https://twitter.com/uvavpr"><img src="all-vpr-web/img/twitter-logo.png" width="40" height="40" alt="Logo for Twitter social media"/>Twitter</a></li>
+          <li class="social-media"><a href="https://twitter.com/uvavpr"><img src="../all-vpr-web/img/twitter-logo.png" width="40" height="40" alt="Logo for Twitter social media"/>Twitter</a></li>
           <li class="social-media"><a href="/news-archive.html">Newsletter Archive</a></li>
         </ul>
       </div>
