--- a/Compliance/regulations.html
+++ b/Compliance/regulations.html
@@ -49,7 +49,7 @@
 <body>
 <div class="uva-header-brand brandbar">
   <div class="container-fluid">
-    <div class="brandbar-content"> <a class="navbar-brand text-hide uva-logo" href="#">University Of Virginia</a> <a href="http://www.virginia.edu/search/site/" class="pull-right uva-search" aria-label="Search"><span class="glyphicon glyphicon-search " aria-hidden="true"></span></a> </div>
+    <div class="brandbar-content"> <a class="navbar-brand text-hide uva-logo" href="http://www.virginia.edu/">University Of Virginia</a> <a href="http://www.virginia.edu/search/site/" class="pull-right uva-search" aria-label="Search"><span class="glyphicon glyphicon-search " aria-hidden="true"></span></a> </div>
   </div>
 </div>
 <nav class="navbar">
